--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -827,6 +827,10 @@ video {
   height: 0.75rem;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
 .max-h-\[13\.7rem\] {
   max-height: 13.7rem;
 }
@@ -841,6 +845,18 @@ video {
 
 .max-h-\[17\.5rem\] {
   max-height: 17.5rem;
+}
+
+.max-h-\[100vh\] {
+  max-height: 100vh;
+}
+
+.max-h-\[90vh\] {
+  max-height: 90vh;
+}
+
+.max-h-\[80vh\] {
+  max-height: 80vh;
 }
 
 .min-h-\[4\.5rem\] {
@@ -1179,6 +1195,10 @@ video {
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-scroll {
+  overflow: scroll;
 }
 
 .rounded-lg {
@@ -1605,6 +1625,10 @@ video {
 
 .pl-5 {
   padding-left: 1.25rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
 }
 
 .text-left {
@@ -2279,6 +2303,18 @@ video {
     max-width: 48rem;
   }
 
+  .md\:max-w-\[100rem\] {
+    max-width: 100rem;
+  }
+
+  .md\:max-w-\[40rem\] {
+    max-width: 40rem;
+  }
+
+  .md\:max-w-\[45rem\] {
+    max-width: 45rem;
+  }
+
   .md\:scale-100 {
     --tw-scale-x: 1;
     --tw-scale-y: 1;
@@ -2340,6 +2376,18 @@ video {
 
   .md\:pl-0 {
     padding-left: 0px;
+  }
+
+  .md\:pl-4 {
+    padding-left: 1rem;
+  }
+
+  .md\:pb-10 {
+    padding-bottom: 2.5rem;
+  }
+
+  .md\:pb-8 {
+    padding-bottom: 2rem;
   }
 
   .md\:text-left {
@@ -2470,6 +2518,18 @@ video {
     margin-left: calc(7rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .lg\:space-x-20 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(5rem * var(--tw-space-x-reverse));
+    margin-left: calc(5rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .lg\:space-x-24 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(6rem * var(--tw-space-x-reverse));
+    margin-left: calc(6rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
   .lg\:py-1 {
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
@@ -2559,12 +2619,52 @@ video {
 }
 
 @media (min-width: 1536px) {
+  .\32xl\:h-\[30rem\] {
+    height: 30rem;
+  }
+
+  .\32xl\:h-\[40rem\] {
+    height: 40rem;
+  }
+
+  .\32xl\:h-\[25rem\] {
+    height: 25rem;
+  }
+
+  .\32xl\:h-\[24rem\] {
+    height: 24rem;
+  }
+
   .\32xl\:max-h-\[19rem\] {
     max-height: 19rem;
   }
 
+  .\32xl\:max-h-\[20rem\] {
+    max-height: 20rem;
+  }
+
+  .\32xl\:max-h-\[25rem\] {
+    max-height: 25rem;
+  }
+
+  .\32xl\:max-h-\[30rem\] {
+    max-height: 30rem;
+  }
+
+  .\32xl\:max-h-\[100rem\] {
+    max-height: 100rem;
+  }
+
+  .\32xl\:max-h-\[24rem\] {
+    max-height: 24rem;
+  }
+
   .\32xl\:max-w-4xl {
     max-width: 56rem;
+  }
+
+  .\32xl\:max-w-\[55rem\] {
+    max-width: 55rem;
   }
 
   .\32xl\:space-x-48 > :not([hidden]) ~ :not([hidden]) {
