--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -715,6 +715,11 @@ video {
   margin-bottom: 0.75rem;
 }
 
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 .mt-6 {
   margin-top: 1.5rem;
 }
@@ -827,36 +832,12 @@ video {
   height: 0.75rem;
 }
 
-.h-10 {
-  height: 2.5rem;
-}
-
-.max-h-\[13\.7rem\] {
-  max-height: 13.7rem;
-}
-
-.max-h-\[18rem\] {
-  max-height: 18rem;
-}
-
-.max-h-\[17rem\] {
-  max-height: 17rem;
+.max-h-\[80vh\] {
+  max-height: 80vh;
 }
 
 .max-h-\[17\.5rem\] {
   max-height: 17.5rem;
-}
-
-.max-h-\[100vh\] {
-  max-height: 100vh;
-}
-
-.max-h-\[90vh\] {
-  max-height: 90vh;
-}
-
-.max-h-\[80vh\] {
-  max-height: 80vh;
 }
 
 .min-h-\[4\.5rem\] {
@@ -1197,10 +1178,6 @@ video {
   overflow: hidden;
 }
 
-.overflow-scroll {
-  overflow: scroll;
-}
-
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -1507,6 +1484,56 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.py-\[0\.3rem\] {
+  padding-top: 0.3rem;
+  padding-bottom: 0.3rem;
+}
+
+.py-\[0\.35rem\] {
+  padding-top: 0.35rem;
+  padding-bottom: 0.35rem;
+}
+
+.py-\[0\.32rem\] {
+  padding-top: 0.32rem;
+  padding-bottom: 0.32rem;
+}
+
+.py-\[0\.31rem\] {
+  padding-top: 0.31rem;
+  padding-bottom: 0.31rem;
+}
+
+.py-\[0\.30rem\] {
+  padding-top: 0.30rem;
+  padding-bottom: 0.30rem;
+}
+
+.py-\[0\.29rem\] {
+  padding-top: 0.29rem;
+  padding-bottom: 0.29rem;
+}
+
+.py-\[0\.27rem\] {
+  padding-top: 0.27rem;
+  padding-bottom: 0.27rem;
+}
+
+.py-\[0\.28rem\] {
+  padding-top: 0.28rem;
+  padding-bottom: 0.28rem;
+}
+
+.py-\[0\.275rem\] {
+  padding-top: 0.275rem;
+  padding-bottom: 0.275rem;
+}
+
 .pl-2 {
   padding-left: 0.5rem;
 }
@@ -1625,10 +1652,6 @@ video {
 
 .pl-5 {
   padding-left: 1.25rem;
-}
-
-.pt-10 {
-  padding-top: 2.5rem;
 }
 
 .text-left {
@@ -1824,13 +1847,13 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1841,16 +1864,6 @@ video {
 
 .blur-sm {
   --tw-blur: blur(4px);
-  filter: var(--tw-filter);
-}
-
-.contrast-125 {
-  --tw-contrast: contrast(1.25);
-  filter: var(--tw-filter);
-}
-
-.contrast-200 {
-  --tw-contrast: contrast(2);
   filter: var(--tw-filter);
 }
 
@@ -2012,10 +2025,6 @@ video {
 
 .group:hover .group-hover\:duration-700 {
   transition-duration: 700ms;
-}
-
-.dark .dark\:relative {
-  position: relative;
 }
 
 .dark .dark\:block {
@@ -2190,14 +2199,6 @@ video {
   opacity: 0.4;
 }
 
-.dark .dark\:opacity-0 {
-  opacity: 0;
-}
-
-.dark .dark\:opacity-100 {
-  opacity: 1;
-}
-
 .dark .dark\:shadow {
   --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -2295,22 +2296,6 @@ video {
     max-width: 24rem;
   }
 
-  .md\:max-w-\[27rem\] {
-    max-width: 27rem;
-  }
-
-  .md\:max-w-3xl {
-    max-width: 48rem;
-  }
-
-  .md\:max-w-\[100rem\] {
-    max-width: 100rem;
-  }
-
-  .md\:max-w-\[40rem\] {
-    max-width: 40rem;
-  }
-
   .md\:max-w-\[45rem\] {
     max-width: 45rem;
   }
@@ -2354,12 +2339,8 @@ video {
     padding-right: 0.5rem;
   }
 
-  .md\:pl-10 {
-    padding-left: 2.5rem;
-  }
-
-  .md\:pb-4 {
-    padding-bottom: 1rem;
+  .md\:pb-8 {
+    padding-bottom: 2rem;
   }
 
   .md\:pl-1 {
@@ -2376,18 +2357,6 @@ video {
 
   .md\:pl-0 {
     padding-left: 0px;
-  }
-
-  .md\:pl-4 {
-    padding-left: 1rem;
-  }
-
-  .md\:pb-10 {
-    padding-bottom: 2.5rem;
-  }
-
-  .md\:pb-8 {
-    padding-bottom: 2rem;
   }
 
   .md\:text-left {
@@ -2500,34 +2469,16 @@ video {
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
   }
 
-  .lg\:space-x-16 > :not([hidden]) ~ :not([hidden]) {
+  .lg\:space-x-24 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
-    margin-right: calc(4rem * var(--tw-space-x-reverse));
-    margin-left: calc(4rem * calc(1 - var(--tw-space-x-reverse)));
+    margin-right: calc(6rem * var(--tw-space-x-reverse));
+    margin-left: calc(6rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .lg\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
     margin-right: calc(1rem * var(--tw-space-x-reverse));
     margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .lg\:space-x-28 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(7rem * var(--tw-space-x-reverse));
-    margin-left: calc(7rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .lg\:space-x-20 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(5rem * var(--tw-space-x-reverse));
-    margin-left: calc(5rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .lg\:space-x-24 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(6rem * var(--tw-space-x-reverse));
-    margin-left: calc(6rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .lg\:py-1 {
@@ -2619,48 +2570,8 @@ video {
 }
 
 @media (min-width: 1536px) {
-  .\32xl\:h-\[30rem\] {
-    height: 30rem;
-  }
-
-  .\32xl\:h-\[40rem\] {
-    height: 40rem;
-  }
-
-  .\32xl\:h-\[25rem\] {
-    height: 25rem;
-  }
-
-  .\32xl\:h-\[24rem\] {
-    height: 24rem;
-  }
-
-  .\32xl\:max-h-\[19rem\] {
-    max-height: 19rem;
-  }
-
-  .\32xl\:max-h-\[20rem\] {
-    max-height: 20rem;
-  }
-
-  .\32xl\:max-h-\[25rem\] {
-    max-height: 25rem;
-  }
-
-  .\32xl\:max-h-\[30rem\] {
-    max-height: 30rem;
-  }
-
-  .\32xl\:max-h-\[100rem\] {
-    max-height: 100rem;
-  }
-
   .\32xl\:max-h-\[24rem\] {
     max-height: 24rem;
-  }
-
-  .\32xl\:max-w-4xl {
-    max-width: 56rem;
   }
 
   .\32xl\:max-w-\[55rem\] {
