--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -720,6 +720,26 @@ video {
   margin-bottom: auto;
 }
 
+.my-1 {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .mt-6 {
   margin-top: 1.5rem;
 }
@@ -842,6 +862,30 @@ video {
 
 .h-3 {
   height: 0.75rem;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-12 {
+  height: 3rem;
+}
+
+.h-14 {
+  height: 3.5rem;
+}
+
+.h-\[3rem\] {
+  height: 3rem;
+}
+
+.h-\[3\.2rem\] {
+  height: 3.2rem;
+}
+
+.h-\[3\.5rem\] {
+  height: 3.5rem;
 }
 
 .max-h-\[80vh\] {
@@ -2516,6 +2560,21 @@ video {
   .lg\:px-52 {
     padding-left: 13rem;
     padding-right: 13rem;
+  }
+
+  .lg\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .lg\:py-\[0\.15rem\] {
+    padding-top: 0.15rem;
+    padding-bottom: 0.15rem;
+  }
+
+  .lg\:py-\[0\.2rem\] {
+    padding-top: 0.2rem;
+    padding-bottom: 0.2rem;
   }
 
   .lg\:pr-12 {
