--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -843,6 +843,26 @@ video {
   height: 0.75rem;
 }
 
+.h-\[50rem\] {
+  height: 50rem;
+}
+
+.h-\[20rem\] {
+  height: 20rem;
+}
+
+.h-\[\] {
+  height: ;
+}
+
+.h-\[45rem\] {
+  height: 45rem;
+}
+
+.h-48 {
+  height: 12rem;
+}
+
 .max-h-\[85vh\] {
   max-height: 85vh;
 }
@@ -2288,6 +2308,26 @@ video {
     height: 15rem;
   }
 
+  .md\:h-\[56\.2\%\] {
+    height: 56.2%;
+  }
+
+  .md\:h-\[45rem\] {
+    height: 45rem;
+  }
+
+  .md\:h-\[35rem\] {
+    height: 35rem;
+  }
+
+  .md\:h-\[25rem\] {
+    height: 25rem;
+  }
+
+  .md\:h-\[50\%\] {
+    height: 50%;
+  }
+
   .md\:w-52 {
     width: 13rem;
   }
@@ -2306,6 +2346,18 @@ video {
 
   .md\:w-auto {
     width: auto;
+  }
+
+  .md\:w-28 {
+    width: 7rem;
+  }
+
+  .md\:w-\[80rem\] {
+    width: 80rem;
+  }
+
+  .md\:w-\[20rem\] {
+    width: 20rem;
   }
 
   .md\:max-w-sm {
@@ -2603,8 +2655,28 @@ video {
 }
 
 @media (min-width: 1900px) {
+  .\33xl\:h-\[\] {
+    height: ;
+  }
+
+  .\33xl\:h-\[20rem\] {
+    height: 20rem;
+  }
+
+  .\33xl\:h-\[17rem\] {
+    height: 17rem;
+  }
+
   .\33xl\:w-\[150\%\] {
     width: 150%;
+  }
+
+  .\33xl\:w-\[50rem\] {
+    width: 50rem;
+  }
+
+  .\33xl\:w-\[100rem\] {
+    width: 100rem;
   }
 }
 
