--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -839,6 +839,18 @@ video {
   max-height: 17.5rem;
 }
 
+.max-h-\[20rem\] {
+  max-height: 20rem;
+}
+
+.max-h-\[19rem\] {
+  max-height: 19rem;
+}
+
+.max-h-\[19\.5rem\] {
+  max-height: 19.5rem;
+}
+
 .min-h-\[4\.5rem\] {
   min-height: 4.5rem;
 }
@@ -1494,6 +1506,46 @@ video {
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
+}
+
+.px-\[50\%\] {
+  padding-left: 50%;
+  padding-right: 50%;
+}
+
+.px-\[50rem\] {
+  padding-left: 50rem;
+  padding-right: 50rem;
+}
+
+.px-\[10rem\] {
+  padding-left: 10rem;
+  padding-right: 10rem;
+}
+
+.px-52 {
+  padding-left: 13rem;
+  padding-right: 13rem;
+}
+
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+
+.px-14 {
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
+}
+
+.px-11 {
+  padding-left: 2.75rem;
+  padding-right: 2.75rem;
 }
 
 .pl-2 {
@@ -2258,6 +2310,18 @@ video {
     width: auto;
   }
 
+  .md\:w-10 {
+    width: 2.5rem;
+  }
+
+  .md\:w-80 {
+    width: 20rem;
+  }
+
+  .md\:w-56 {
+    width: 14rem;
+  }
+
   .md\:max-w-sm {
     max-width: 24rem;
   }
@@ -2529,6 +2593,14 @@ video {
 @media (min-width: 1536px) {
   .\32xl\:max-h-\[25rem\] {
     max-height: 25rem;
+  }
+
+  .\32xl\:max-h-\[26rem\] {
+    max-height: 26rem;
+  }
+
+  .\32xl\:max-h-\[26\.5rem\] {
+    max-height: 26.5rem;
   }
 
   .\32xl\:max-w-\[55rem\] {
