--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -839,14 +839,6 @@ video {
   max-height: 17.5rem;
 }
 
-.max-h-\[20rem\] {
-  max-height: 20rem;
-}
-
-.max-h-\[19rem\] {
-  max-height: 19rem;
-}
-
 .max-h-\[19\.5rem\] {
   max-height: 19.5rem;
 }
@@ -1081,6 +1073,14 @@ video {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -1187,6 +1187,12 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(3.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(3.5rem * var(--tw-space-y-reverse));
+}
+
+.space-x-0 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0px * var(--tw-space-x-reverse));
+  margin-left: calc(0px * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .overflow-auto {
@@ -1508,39 +1514,9 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.px-\[50\%\] {
-  padding-left: 50%;
-  padding-right: 50%;
-}
-
-.px-\[50rem\] {
-  padding-left: 50rem;
-  padding-right: 50rem;
-}
-
-.px-\[10rem\] {
-  padding-left: 10rem;
-  padding-right: 10rem;
-}
-
-.px-52 {
-  padding-left: 13rem;
-  padding-right: 13rem;
-}
-
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
-
 .px-16 {
   padding-left: 4rem;
   padding-right: 4rem;
-}
-
-.px-14 {
-  padding-left: 3.5rem;
-  padding-right: 3.5rem;
 }
 
 .px-11 {
@@ -1666,6 +1642,10 @@ video {
 
 .pl-5 {
   padding-left: 1.25rem;
+}
+
+.pr-5 {
+  padding-right: 1.25rem;
 }
 
 .text-left {
@@ -2310,14 +2290,6 @@ video {
     width: auto;
   }
 
-  .md\:w-10 {
-    width: 2.5rem;
-  }
-
-  .md\:w-80 {
-    width: 20rem;
-  }
-
   .md\:w-56 {
     width: 14rem;
   }
@@ -2593,10 +2565,6 @@ video {
 @media (min-width: 1536px) {
   .\32xl\:max-h-\[25rem\] {
     max-height: 25rem;
-  }
-
-  .\32xl\:max-h-\[26rem\] {
-    max-height: 26rem;
   }
 
   .\32xl\:max-h-\[26\.5rem\] {
