--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -715,11 +715,6 @@ video {
   margin-bottom: 0.75rem;
 }
 
-.mx-52 {
-  margin-left: 13rem;
-  margin-right: 13rem;
-}
-
 .mt-6 {
   margin-top: 1.5rem;
 }
@@ -746,14 +741,6 @@ video {
 
 .mb-10 {
   margin-bottom: 2.5rem;
-}
-
-.mb-auto {
-  margin-bottom: auto;
-}
-
-.mb-20 {
-  margin-bottom: 5rem;
 }
 
 .block {
@@ -844,10 +831,6 @@ video {
   height: 0.75rem;
 }
 
-.h-10 {
-  height: 2.5rem;
-}
-
 .h-14 {
   height: 3.5rem;
 }
@@ -864,16 +847,16 @@ video {
   max-height: 19.5rem;
 }
 
-.max-h-\[15rem\] {
-  max-height: 15rem;
-}
-
-.max-h-\[16srem\] {
-  max-height: 16srem;
-}
-
 .max-h-\[16rem\] {
   max-height: 16rem;
+}
+
+.max-h-\[16\.1rem\] {
+  max-height: 16.1rem;
+}
+
+.max-h-\[16\.2rem\] {
+  max-height: 16.2rem;
 }
 
 .min-h-\[4\.5rem\] {
@@ -964,32 +947,12 @@ video {
   width: 75%;
 }
 
-.w-52 {
-  width: 13rem;
-}
-
-.w-36 {
-  width: 9rem;
-}
-
-.w-48 {
-  width: 12rem;
-}
-
-.w-80 {
-  width: 20rem;
-}
-
 .w-44 {
   width: 11rem;
 }
 
 .w-40 {
   width: 10rem;
-}
-
-.w-10 {
-  width: 2.5rem;
 }
 
 .w-14 {
@@ -1138,14 +1101,6 @@ video {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
 .flex-col {
   flex-direction: column;
 }
@@ -1236,6 +1191,12 @@ video {
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 
+.space-x-0 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0px * var(--tw-space-x-reverse));
+  margin-left: calc(0px * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1252,12 +1213,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(3.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(3.5rem * var(--tw-space-y-reverse));
-}
-
-.space-x-0 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0px * var(--tw-space-x-reverse));
-  margin-left: calc(0px * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .overflow-auto {
@@ -1589,11 +1544,6 @@ video {
   padding-right: 2.75rem;
 }
 
-.px-52 {
-  padding-left: 13rem;
-  padding-right: 13rem;
-}
-
 .pl-2 {
   padding-left: 0.5rem;
 }
@@ -1670,6 +1620,10 @@ video {
   padding-left: 0.25rem;
 }
 
+.pr-5 {
+  padding-right: 1.25rem;
+}
+
 .pb-5 {
   padding-bottom: 1.25rem;
 }
@@ -1712,18 +1666,6 @@ video {
 
 .pl-5 {
   padding-left: 1.25rem;
-}
-
-.pr-5 {
-  padding-right: 1.25rem;
-}
-
-.pr-10 {
-  padding-right: 2.5rem;
-}
-
-.pr-6 {
-  padding-right: 1.5rem;
 }
 
 .pb-7 {
@@ -1786,10 +1728,6 @@ video {
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
-}
-
-.text-\[0\.5rem\] {
-  font-size: 0.5rem;
 }
 
 .font-semibold {
@@ -2376,16 +2314,16 @@ video {
     width: 60%;
   }
 
+  .md\:w-7 {
+    width: 1.75rem;
+  }
+
   .md\:w-auto {
     width: auto;
   }
 
   .md\:w-56 {
     width: 14rem;
-  }
-
-  .md\:w-7 {
-    width: 1.75rem;
   }
 
   .md\:max-w-sm {
@@ -2527,14 +2465,6 @@ video {
 
   .lg\:mt-auto {
     margin-top: auto;
-  }
-
-  .lg\:mr-2 {
-    margin-right: 0.5rem;
-  }
-
-  .lg\:mr-0 {
-    margin-right: 0px;
   }
 
   .lg\:mr-4 {
@@ -2685,20 +2615,20 @@ video {
     max-height: 26.5rem;
   }
 
+  .\32xl\:max-h-\[23\.2rem\] {
+    max-height: 23.2rem;
+  }
+
+  .\32xl\:max-h-\[22rem\] {
+    max-height: 22rem;
+  }
+
   .\32xl\:max-h-\[24rem\] {
     max-height: 24rem;
   }
 
-  .\32xl\:max-h-\[23rem\] {
-    max-height: 23rem;
-  }
-
-  .\32xl\:max-h-\[23\.5rem\] {
-    max-height: 23.5rem;
-  }
-
-  .\32xl\:max-h-\[23\.2rem\] {
-    max-height: 23.2rem;
+  .\32xl\:max-h-\[23\.3rem\] {
+    max-height: 23.3rem;
   }
 
   .\32xl\:max-w-\[55rem\] {
