--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -695,11 +695,6 @@ video {
   margin-right: auto;
 }
 
-.my-6 {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-
 .mx-5 {
   margin-left: 1.25rem;
   margin-right: 1.25rem;
@@ -729,10 +724,6 @@ video {
 
 .mr-2 {
   margin-right: 0.5rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
 }
 
 .mb-5 {
@@ -795,18 +786,6 @@ video {
   height: 0.5rem;
 }
 
-.h-64 {
-  height: 16rem;
-}
-
-.h-48 {
-  height: 12rem;
-}
-
-.h-20 {
-  height: 5rem;
-}
-
 .h-6 {
   height: 1.5rem;
 }
@@ -829,6 +808,10 @@ video {
 
 .h-3 {
   height: 0.75rem;
+}
+
+.h-20 {
+  height: 5rem;
 }
 
 .h-14 {
@@ -891,14 +874,6 @@ video {
   width: 27.7rem;
 }
 
-.w-\[120\%\] {
-  width: 120%;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
 .w-6 {
   width: 1.5rem;
 }
@@ -941,6 +916,10 @@ video {
 
 .w-\[75\%\] {
   width: 75%;
+}
+
+.w-20 {
+  width: 5rem;
 }
 
 .w-44 {
@@ -1290,11 +1269,6 @@ video {
   border-color: rgba(217, 119, 6, var(--tw-border-opacity));
 }
 
-.border-gray-50 {
-  --tw-border-opacity: 1;
-  border-color: rgba(249, 250, 251, var(--tw-border-opacity));
-}
-
 .border-transparent {
   border-color: transparent;
 }
@@ -1500,11 +1474,6 @@ video {
   padding-bottom: 2px;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
@@ -1664,6 +1633,10 @@ video {
   padding-left: 1.25rem;
 }
 
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
 .pb-7 {
   padding-bottom: 1.75rem;
 }
@@ -1795,11 +1768,6 @@ video {
   color: rgba(249, 250, 251, var(--tw-text-opacity));
 }
 
-.text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgba(107, 114, 128, var(--tw-text-opacity));
-}
-
 .text-gray-100 {
   --tw-text-opacity: 1;
   color: rgba(243, 244, 246, var(--tw-text-opacity));
@@ -1847,10 +1815,6 @@ video {
   opacity: 0.3;
 }
 
-.opacity-100 {
-  opacity: 1;
-}
-
 .shadow-inner {
   --tw-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -1863,11 +1827,6 @@ video {
 
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -2029,14 +1988,6 @@ video {
   color: rgba(245, 158, 11, var(--tw-text-opacity));
 }
 
-.group:hover .group-hover\:opacity-0 {
-  opacity: 0;
-}
-
-.group:hover .group-hover\:opacity-100 {
-  opacity: 1;
-}
-
 .group:hover .group-hover\:duration-700 {
   transition-duration: 700ms;
 }
@@ -2071,11 +2022,6 @@ video {
 .dark .dark\:border-\[\#3d3d3d\] {
   --tw-border-opacity: 1;
   border-color: rgba(61, 61, 61, var(--tw-border-opacity));
-}
-
-.dark .dark\:border-black {
-  --tw-border-opacity: 1;
-  border-color: rgba(0, 0, 0, var(--tw-border-opacity));
 }
 
 .dark .dark\:border-transparent {
@@ -2180,11 +2126,6 @@ video {
   color: rgba(99, 99, 99, var(--tw-text-opacity));
 }
 
-.dark .dark\:text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgba(75, 85, 99, var(--tw-text-opacity));
-}
-
 .dark .dark\:text-gray-500 {
   --tw-text-opacity: 1;
   color: rgba(107, 114, 128, var(--tw-text-opacity));
@@ -2260,18 +2201,9 @@ video {
     bottom: 0.45rem;
   }
 
-  .md\:mx-14 {
-    margin-left: 3.5rem;
-    margin-right: 3.5rem;
-  }
-
   .md\:mx-16 {
     margin-left: 4rem;
     margin-right: 4rem;
-  }
-
-  .md\:mt-0 {
-    margin-top: 0px;
   }
 
   .md\:block {
@@ -2282,24 +2214,12 @@ video {
     height: 2.5rem;
   }
 
-  .md\:h-80 {
-    height: 20rem;
-  }
-
-  .md\:h-\[15rem\] {
-    height: 15rem;
-  }
-
   .md\:h-7 {
     height: 1.75rem;
   }
 
   .md\:w-52 {
     width: 13rem;
-  }
-
-  .md\:w-\[80rem\] {
-    width: 80rem;
   }
 
   .md\:w-\[35rem\] {
@@ -2352,21 +2272,8 @@ video {
     justify-content: space-between;
   }
 
-  .md\:rounded-none {
-    border-radius: 0px;
-  }
-
-  .md\:bg-transparent {
-    background-color: transparent;
-  }
-
   .md\:p-10 {
     padding: 2.5rem;
-  }
-
-  .md\:px-2 {
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
   }
 
   .md\:pb-8 {
@@ -2403,11 +2310,6 @@ video {
     line-height: 2.5rem;
   }
 
-  .md\:shadow-none {
-    --tw-shadow: 0 0 #0000;
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  }
-
   .md\:hover\:translate-y-\[-0\.15rem\]:hover {
     --tw-translate-y: -0.15rem;
     transform: var(--tw-transform);
@@ -2423,18 +2325,8 @@ video {
     transform: var(--tw-transform);
   }
 
-  .group:hover .md\:group-hover\:text-gray-900 {
-    --tw-text-opacity: 1;
-    color: rgba(17, 24, 39, var(--tw-text-opacity));
-  }
-
   .group:hover .md\:group-hover\:opacity-50 {
     opacity: 0.5;
-  }
-
-  .dark .group:hover .md\:dark\:group-hover\:text-gray-300 {
-    --tw-text-opacity: 1;
-    color: rgba(209, 213, 219, var(--tw-text-opacity));
   }
 
   .dark .group:hover .md\:dark\:group-hover\:opacity-70 {
@@ -2639,16 +2531,6 @@ video {
     --tw-space-x-reverse: 0;
     margin-right: calc(12rem * var(--tw-space-x-reverse));
     margin-left: calc(12rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-}
-
-@media (min-width: 1900px) {
-  .\33xl\:h-\[17rem\] {
-    height: 17rem;
-  }
-
-  .\33xl\:w-\[100rem\] {
-    width: 100rem;
   }
 }
 
