fixed font name

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1653,7 +1653,7 @@ video {
   font-family: 'Quicksand', cursive;;
 }
 
-.font-sourceCodePro {
+.font-sourceSansPro {
   font-family: 'Source Sans Pro', Arial, sans-serif;
 }
 
