--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -814,6 +814,18 @@ video {
   height: 3.5rem;
 }
 
+.h-11 {
+  height: 2.75rem;
+}
+
+.h-12 {
+  height: 3rem;
+}
+
+.h-16 {
+  height: 4rem;
+}
+
 .max-h-\[85vh\] {
   max-height: 85vh;
 }
