--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -969,6 +969,11 @@ video {
   transform: var(--tw-transform);
 }
 
+.rotate-45 {
+  --tw-rotate: 45deg;
+  transform: var(--tw-transform);
+}
+
 .scale-0 {
   --tw-scale-x: 0;
   --tw-scale-y: 0;
@@ -1297,9 +1302,19 @@ video {
   border-color: rgba(156, 163, 175, var(--tw-border-opacity));
 }
 
+.border-gray-600 {
+  --tw-border-opacity: 1;
+  border-color: rgba(75, 85, 99, var(--tw-border-opacity));
+}
+
 .border-t-yellow-500 {
   --tw-border-opacity: 1;
   border-top-color: rgba(245, 158, 11, var(--tw-border-opacity));
+}
+
+.border-r-yellow-500 {
+  --tw-border-opacity: 1;
+  border-right-color: rgba(245, 158, 11, var(--tw-border-opacity));
 }
 
 .bg-gray-100 {
@@ -1354,6 +1369,11 @@ video {
 .bg-gray-700 {
   --tw-bg-opacity: 1;
   background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
+}
+
+.bg-pink-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(236, 72, 153, var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -1419,6 +1439,10 @@ video {
 
 .to-yellow-100 {
   --tw-gradient-to: #fef3c7;
+}
+
+.bg-clip-border {
+  background-clip: border-box;
 }
 
 .bg-clip-text {
