modified capsule design of primary nav

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2657,6 +2657,18 @@ video {
     padding-left: 1.5rem;
   }
 
+  .lg\:pl-10 {
+    padding-left: 2.5rem;
+  }
+
+  .lg\:pl-16 {
+    padding-left: 4rem;
+  }
+
+  .lg\:pl-5 {
+    padding-left: 1.25rem;
+  }
+
   .lg\:text-5xl {
     font-size: 3rem;
     line-height: 1;
