--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1434,6 +1434,11 @@ video {
   background-color: rgba(163, 80, 204, var(--tw-bg-opacity));
 }
 
+.bg-\[\#E6349E\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(230, 52, 158, var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
@@ -2085,6 +2090,11 @@ video {
   border-color: rgba(163, 80, 204, var(--tw-border-opacity));
 }
 
+.hover\:border-\[\#E6349E\]:hover {
+  --tw-border-opacity: 1;
+  border-color: rgba(230, 52, 158, var(--tw-border-opacity));
+}
+
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
@@ -2128,6 +2138,11 @@ video {
 .hover\:bg-\[\#A350CC\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgba(163, 80, 204, var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#E6349E\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(230, 52, 158, var(--tw-bg-opacity));
 }
 
 .hover\:text-yellow-500:hover {
