--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -674,6 +674,14 @@ video {
   left: 8.5rem;
 }
 
+.left-2 {
+  left: 0.5rem;
+}
+
+.left-1 {
+  left: 0.25rem;
+}
+
 .z-20 {
   z-index: 20;
 }
@@ -922,6 +930,18 @@ video {
   width: 3.5rem;
 }
 
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-12 {
+  width: 3rem;
+}
+
+.w-11 {
+  width: 2.75rem;
+}
+
 .max-w-full {
   max-width: 100%;
 }
@@ -939,6 +959,26 @@ video {
   transform: var(--tw-transform);
 }
 
+.translate-x-3 {
+  --tw-translate-x: 0.75rem;
+  transform: var(--tw-transform);
+}
+
+.translate-x-10 {
+  --tw-translate-x: 2.5rem;
+  transform: var(--tw-transform);
+}
+
+.translate-x-6 {
+  --tw-translate-x: 1.5rem;
+  transform: var(--tw-transform);
+}
+
+.translate-x-7 {
+  --tw-translate-x: 1.75rem;
+  transform: var(--tw-transform);
+}
+
 .rotate-12 {
   --tw-rotate: 12deg;
   transform: var(--tw-transform);
@@ -951,6 +991,31 @@ video {
 
 .rotate-45 {
   --tw-rotate: 45deg;
+  transform: var(--tw-transform);
+}
+
+.rotate-90 {
+  --tw-rotate: 90deg;
+  transform: var(--tw-transform);
+}
+
+.rotate-\[180\] {
+  --tw-rotate: 180;
+  transform: var(--tw-transform);
+}
+
+.rotate-\[180deg\] {
+  --tw-rotate: 180deg;
+  transform: var(--tw-transform);
+}
+
+.rotate-\[120deg\] {
+  --tw-rotate: 120deg;
+  transform: var(--tw-transform);
+}
+
+.rotate-\[140deg\] {
+  --tw-rotate: 140deg;
   transform: var(--tw-transform);
 }
 
@@ -1026,6 +1091,10 @@ video {
 
 .cursor-default {
   cursor: default;
+}
+
+.cursor-wait {
+  cursor: wait;
 }
 
 .resize {
@@ -1366,6 +1435,16 @@ video {
   background-color: rgba(226, 59, 139, var(--tw-bg-opacity));
 }
 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+}
+
+.bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
@@ -1568,6 +1647,16 @@ video {
   padding-right: 31%;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
 .pt-1 {
   padding-top: 0.25rem;
 }
@@ -1706,6 +1795,18 @@ video {
 
 .pt-16 {
   padding-top: 4rem;
+}
+
+.pr-1 {
+  padding-right: 0.25rem;
+}
+
+.pr-10 {
+  padding-right: 2.5rem;
+}
+
+.pl-\[0\.15rem\] {
+  padding-left: 0.15rem;
 }
 
 .text-left {
@@ -1978,6 +2079,10 @@ video {
   transition-timing-function: linear;
 }
 
+.checked\:opacity-100:checked {
+  opacity: 1;
+}
+
 .hover\:scale-125:hover {
   --tw-scale-x: 1.25;
   --tw-scale-y: 1.25;
@@ -2073,6 +2178,15 @@ video {
   color: rgba(251, 191, 36, var(--tw-text-opacity));
 }
 
+.group:checked .group-checked\:bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
+}
+
+.group:checked .group-checked\:pr-10 {
+  padding-right: 2.5rem;
+}
+
 .group:hover .group-hover\:overflow-y-auto {
   overflow-y: auto;
 }
@@ -2126,6 +2240,21 @@ video {
   transition-duration: 700ms;
 }
 
+.peer:checked ~ .peer-checked\:bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
+}
+
+.peer:checked ~ .peer-checked\:bg-yellow-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(252, 211, 77, var(--tw-bg-opacity));
+}
+
+.peer:checked ~ .peer-checked\:text-yellow-500 {
+  --tw-text-opacity: 1;
+  color: rgba(245, 158, 11, var(--tw-text-opacity));
+}
+
 .dark .dark\:block {
   display: block;
 }
@@ -2136,6 +2265,11 @@ video {
 
 .dark .dark\:hidden {
   display: none;
+}
+
+.dark .dark\:translate-x-7 {
+  --tw-translate-x: 1.75rem;
+  transform: var(--tw-transform);
 }
 
 .dark .dark\:divide-gray-600 > :not([hidden]) ~ :not([hidden]) {
@@ -2259,6 +2393,16 @@ video {
 .dark .dark\:bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
 }
 
 .dark .dark\:from-red-800 {
