added none select in dark mode toggle

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1153,6 +1153,13 @@ video {
   cursor: wait;
 }
 
+.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
 .resize {
   resize: both;
 }
